--- a/lab1/khanacademy/1.html
+++ b/lab1/khanacademy/1.html
@@ -1,1 +1,16 @@
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Challenge: Write a Poem</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+    <h1>w</h1>
+    <p>i sky <br>
+    hi sun <br>
+    hi world
+        
+    </p>
+    </body>
+</html>
 
