--- a/lab1/khanacademy/03.html
+++ b/lab1/khanacademy/03.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Challenge: Wishlist</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <ol>
+            <li>1</li>
+            <li>
+            33
+            </li>
+            <li>
+        </ol>
+        
+        
+    </body>
+</html>
