--- a/lab1/khanacademy/12.html
+++ b/lab1/khanacademy/12.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Challenge: The dinner table</title>
+    </head>
+    <body>
+    
+        <h1>Our dinner menu</h1>
 
+        <table>
+            <thead>
+                <tr>
+                    <th>Meal</th>
+                    <th>Ingredients</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                    efe
+                    </td>
+                    <td>
+                    wfw
+                    </td>
+                    <td>
+                    wefw
+                    </td>
+                </tr>
+                                <tr>
+                    <td>
+                    efe
+                    </td>
+                    <td>
+                    wfw
+                    </td>
+                    <td>
+                    wefw
+                    </td>
+                </tr>
+                                <tr>
+                    <td>
+                    efe
+                    </td>
+                    <td>
+                    wfw
+                    </td>
+                    <td>
+                    wefw
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+    </body>
+</html>
