--- a/lab1/3schools/06.html
+++ b/lab1/3schools/06.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+<img src="img_girl.jpg">
+<img src="img_girl.jpg" width="500" height="600">
+<img src="img_girl.jpg" alt="Girl with a jacket">
+<img src="img_typo.jpg" alt="Girl with a jacket">
+</body>
+</html>
