--- a/lab3/todo/1.html
+++ b/lab3/todo/1.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToDo List</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">ToDo List</a>
+        </div>
+    </nav>
+    
+    <div class="container mt-4">
+        <h2>ToDo List</h2>
+        <div class="input-group mb-3">
+            <input id="task" type="text" class="form-control" placeholder="New Task">
+            <button class="btn btn-primary" onclick="addTask()">Add</button>
+        </div>
+        <ul id="list" class="list-group"></ul>
+    </div>
+    
+    <script src="script.js"></script>
+</body>
+</html>
 
