--- a/lab3/todo/1.html
+++ b/lab3/todo/1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo List</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="1.css">
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
@@ -23,7 +23,7 @@
         <ul id="list" class="list-group"></ul>
     </div>
     
-    <script src="script.js"></script>
+    <script src="1.js"></script>
 </body>
 </html>
 
